--- a/stackgres-k8s/src/common/src/main/resources/application.properties
+++ b/stackgres-k8s/src/common/src/main/resources/application.properties
@@ -13,3 +13,4 @@ stackgres.documentation.uri=${stackgres.documentation.uri}
 stackgres.documentation.errorsPath=${stackgres.documentation.errorsPath}
 stackgres.lockPollInterval=${stackgres.lockPollInterval}
 stackgres.lockTimeout=${stackgres.lockTimeout}
+stackgres.imagePullPolicy=${stackgres.imagePullPolicy}
