--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -56,6 +56,7 @@ stackgres.documentation.errorsPath=${stackgres.documentation.errorsPath}
 stackgres.extensionsRepositoryUrls=${stackgres.extensionsRepositoryUrls}
 stackgres.lockPollInterval=${stackgres.lockPollInterval}
 stackgres.lockTimeout=${stackgres.lockTimeout}
+stackgres.imagePullPolicy=${stackgres.imagePullPolicy}
 
 # jOOQ
 org.jooq.no-logo=true
