--- a/.gitlab-ci/image-build.yml
+++ b/.gitlab-ci/image-build.yml
@@ -54,8 +54,8 @@ build operator native image:
         sh -xe operator/src/main/buildah/build-image-native.sh
   only:
     variables:
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
+      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^main.*$/
+      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "current"
       - $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
       - $DO_DEPLOY
       - $DO_NATIVE
@@ -79,8 +79,8 @@ build restapi native image:
         sh -xe api-web/src/main/buildah/build-image-native.sh
   only:
     variables:
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
+      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^main.*$/
+      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "current"
       - $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
       - $DO_DEPLOY
       - $DO_NATIVE
