doc(ui): show banner when docs version is under development

--- a/doc/config.toml
+++ b/doc/config.toml
@@ -15,6 +15,7 @@ defaultContentLanguageInSubdir = false
   disableNextPrev = true
   themeVariant = "stackgres"
   DisableShortcutsTitle = true
+  isDevVersion = false
 
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
