--- a/stackgres-k8s/install/helm/stackgres-operator/templates/operator-deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/operator-deployment.yaml
@@ -34,9 +34,11 @@ spec:
         image: "{{ .Values.operator.image.name }}:{{ .Values.operator.image.tag }}"
         imagePullPolicy: {{ .Values.operator.image.pullPolicy }}
         securityContext:
+          {{- if not (.Capabilities.APIVersions.Has "project.openshift.io/v1") }}
           runAsNonRoot: true
           runAsUser: 185
           runAsGroup: 185
+          {{- end }}
         env:
           - name: OPERATOR_NAME
             value: "{{ .Release.Name }}"
