--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
@@ -32,9 +32,11 @@ spec:
         image: "{{ .Values.restapi.image.name }}:{{ .Values.restapi.image.tag }}"
         imagePullPolicy: {{ .Values.restapi.image.pullPolicy }}
         securityContext:
+          {{- if not (.Capabilities.APIVersions.Has "project.openshift.io/v1") }}
           runAsNonRoot: true
           runAsUser: 185
           runAsGroup: 185
+          {{- end }}
         env:
           - name: RESTAPI_NAMESPACE
             valueFrom:
@@ -108,9 +110,11 @@ spec:
         image: '{{ .Values.adminui.image.name }}:{{ .Values.adminui.image.tag }}'
         imagePullPolicy: {{ .Values.adminui.image.pullPolicy }}
         securityContext:
+          {{- if not (.Capabilities.APIVersions.Has "project.openshift.io/v1") }}
           runAsNonRoot: true
           runAsUser: 998
           runAsGroup: 998
+          {{- end }}
         env:
           {{- if and .Values.grafana.url .Values.grafana.token .Values.grafana.webHost }}
           - name: GRAFANA_EMBEDDED
