--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -79,20 +79,20 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <!-- Dependencies versions -->
     <quarkus.version>1.13.7.Final</quarkus.version>
-    <kubernetes-client.version>5.4.1</kubernetes-client.version>
+    <kubernetes-client.version>5.8.0</kubernetes-client.version>
     <jool.version>0.9.14</jool.version>
     <immutables.version>2.8.8</immutables.version>
-    <checkstyle.version>8.44</checkstyle.version>
-    <spotbugs.version>4.3.0</spotbugs.version>
-    <pmd.version>6.35.0</pmd.version>
+    <checkstyle.version>9.0</checkstyle.version>
+    <spotbugs.version>4.4.1</spotbugs.version>
+    <pmd.version>6.38.0</pmd.version>
     <docker-junit-extension.version>1.2.15</docker-junit-extension.version>
     <jersey.version>2.32</jersey.version>
     <fluent-process.version>1.0.1</fluent-process.version>
     <log4j.version>2.13.3</log4j.version>
     <jooq.version>3.13.4</jooq.version>
-    <jetbrains-annotations.version>21.0.1</jetbrains-annotations.version>
+    <jetbrains-annotations.version>22.0.0</jetbrains-annotations.version>
     <mockito.version>3.0.0</mockito.version>
-    <swagger-annotations.version>2.1.9</swagger-annotations.version>
+    <swagger-annotations.version>2.1.10</swagger-annotations.version>
     <reflections.version>0.9.12</reflections.version>
     <truth.version>1.1.3</truth.version>
     <jsonassert.version>1.5.0</jsonassert.version>
@@ -105,13 +105,12 @@
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
     <failsafe-plugin.version>3.0.0-M5</failsafe-plugin.version>
     <checkstyle-plugin.version>3.1.2</checkstyle-plugin.version>
-    <spotbugs-plugin.version>4.2.3</spotbugs-plugin.version>
-    <pmd-plugin.version>3.14.0</pmd-plugin.version>
-    <enforcer-plugin.version>3.0.0-M3</enforcer-plugin.version>
+    <spotbugs-plugin.version>4.4.1</spotbugs-plugin.version>
+    <pmd-plugin.version>3.15.0</pmd-plugin.version>
+    <enforcer-plugin.version>3.0.0</enforcer-plugin.version>
     <dependency-plugin.version>3.1.1</dependency-plugin.version>
-    <docker-maven-plugin.version>0.34.1</docker-maven-plugin.version>
-    <jandex-maven-plugin.version>1.1.0</jandex-maven-plugin.version>
-    <jandex.version>2.3.0.Final</jandex.version>
+    <docker-maven-plugin.version>0.37.0</docker-maven-plugin.version>
+    <jandex-maven-plugin.version>1.1.1</jandex-maven-plugin.version>
     <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
     <swagger-maven-plugin.version>2.1.6</swagger-maven-plugin.version>
     <!-- Checkstyle, SpotBugs and PMD properties -->
@@ -414,13 +413,6 @@
               </goals>
             </execution>
           </executions>
-          <dependencies>
-            <dependency>
-              <groupId>org.jboss</groupId>
-              <artifactId>jandex</artifactId>
-              <version>${jandex.version}</version>
-            </dependency>
-          </dependencies>
         </plugin>
         <plugin>
           <groupId>io.openapitools.swagger</groupId>
