feat: extensions cache
This is the PoC of an extensions cache. It is an MVP and also a WIP so
use this at your own risk.

To use images with packaged extensions instead of downloading directly
from the repository and the following parameter to the extensions
repository URL:

imageTemplate="${REGISTRY}/${REGISTRY_PATH}"'/${COMPONENT}-packaged:v${COMPONENT_VERSION}-pg${POSTGRES_VERSION}-${HASH}'
imageRegcredSecret="<secret name with docker registry credentials for
registry.gitlab.com>"

To create the imageRegcredSecret secret use following command:

```
    REPOSITORY_CREDENTIAL="$(jq -r '.auths|to_entries|.[]|.key + "|" +
.value.auth' "${HOME}/.docker/config.json" \
      | grep -F "registry.gitlab.com" | head -n 1 | cut -d '|' -f 2)"
    kubectl delete secret --ignore-not-found -n "$OPERATOR_NAMESPACE"
"$REPOSITORY_CREDENTIAL_SECRET"
    kubectl create secret docker-registry -n "$OPERATOR_NAMESPACE"
"$REPOSITORY_CREDENTIAL_SECRET" \
      --docker-server="${REGISTRY}" \
      --docker-username="${REPOSITORY_CREDENTIAL%:*}" \
      --docker-password="${REPOSITORY_CREDENTIAL#*:}"
```

With E2E after logging into registry with `docker login "$REGISTRY"`
imageRegcredSecret secret creation is automatic.

--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -48,12 +48,12 @@ cluster:
   pods:
     persistentVolume:
       size: 5Gi
-      ## If defined, storageClassName: <storageClass>
-      ## If set to "-", storageClassName: "", which disables dynamic provisioning
-      ## If undefined (the default) or set to null, no storageClassName spec is
+      ## If defined, storageClass: <storageClass>
+      ## If set to "-", storageClass: "", which disables dynamic provisioning
+      ## If undefined (the default) or set to null, no storageClass spec is
       ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
       ##   GKE, AWS & OpenStack)
-      #storageClass: "-"
+      # storageClass: "-"
     disableConnectionPooling: false
     disablePostgresUtil: false
     disableMetricsExporter: false
