--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -45,6 +45,8 @@ adminui:
 
 serviceAccount:
   create: true
+  # repoCredentials:
+  # - <secret name>
 
 initClusterRole: cluster-admin
 
@@ -113,4 +115,13 @@ developer: {}
 extensions:
   repositoryUrls:
   - https://extensions.stackgres.io/postgres/repository
+  cache:
+    persistentVolume:
+      size: 1Gi
+      ## If defined, storageClass: <storageClass>
+      ## If set to "-", storageClass: "", which disables dynamic provisioning
+      ## If undefined (the default) or set to null, no storageClass spec is
+      ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+      ##   GKE, AWS & OpenStack)
+      # storageClass: "-"
 
