--- a/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-service-account.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-service-account.yaml
@@ -1,13 +1,16 @@
-{{- if .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-extensions-cache
   namespace: {{ .Release.Namespace }}
+  annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/managed-by: Helm
 {{- if .Values.serviceAccount.repoCredentials }}
 imagePullSecrets:
 {{- range .Values.serviceAccount.repoCredentials }}
 - name: {{ . }}
-{{- end }}
 {{- end }}
 {{- end }}
