--- a/stackgres-k8s/install/helm/stackgres-operator/templates/operator-deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/operator-deployment.yaml
@@ -90,7 +90,7 @@ spec:
           - name: SG_IMAGE_PULL_POLICY
             value: "{{ .Values.imagePullPolicy }}"
           - name: EXTENSIONS_REPOSITORY_URLS
-            value: "{{ range $index, $element := .Values.extensions.repositoryUrls }}{{ if $index }},{{ end }}{{ $element }}{{ end }}"
+            value: "http://{{ .Release.Name }}-extensions-cache.{{ .Release.Namespace }}"
         ports:
         - containerPort: 8080
           name: "http"
