--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-service-account.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-service-account.yaml
@@ -11,6 +11,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
 {{- if .Values.serviceAccount.repoCredentials }}
 imagePullSecrets:
-- name: {{ .Values.serviceAccount.repoCredentials }}
+{{- range .Values.serviceAccount.repoCredentials }}
+- name: {{ . }}
+{{- end }}
 {{- end }}
 {{- end }}
