--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -111,6 +111,7 @@ developer: {}
   # externalOperatorPort: 8080
   # externalRestApiIp: 172.17.0.1
   # externalRestApiPort: 8081
+  # allowPullExtensionsFromImageRepository: true
 
 extensions:
   repositoryUrls:
