--- a/stackgres-k8s/src/operator/src/main/resources/pgbouncer-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/pgbouncer-default-values.properties
@@ -10,7 +10,7 @@ auth_type=md5
 auth_user=authenticator
 auth_query=SELECT usename, passwd FROM pg_shadow WHERE usename=$1
 
-admin_users=postgres
-stats_users=postgres
+admin_users=pgbouncer_admin
+stats_users=pgbouncer_stats
 application_name_add_host=1
 ignore_startup_parameters=extra_float_digits
