--- a/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-statefulset.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-statefulset.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.extensions.cache.enabled }}
 apiVersion: "apps/v1"
 kind: "StatefulSet"
 metadata:
@@ -24,16 +25,15 @@ spec:
         app: {{ .Release.Name }}-extensions-cache
         group:  stackgres.io
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
       serviceAccountName: {{ .Release.Name }}-extensions-cache
       shareProcessNamespace: true
       terminationGracePeriodSeconds: 0
       containers:
       - name: http
         image: "registry.access.redhat.com/ubi8/nginx-118:1-39"
-        imagePullPolicy: IfNotPresent
-        securityContext:
-          runAsUser: 1000
-          runAsGroup: 1000
         args:
           - '/bin/sh'
           - '-ec'
@@ -47,15 +47,14 @@ spec:
           name: "http"
           protocol: "TCP"
         livenessProbe:
-          httpGet:
-            path: /index.json
+          tcpSocket:
             port: 8080
         volumeMounts:
-          - name: extensions-cache-nginx
+          - name: extensions-cache-config
             mountPath: /etc/nginx/nginx.conf
             subPath: nginx.conf
             readOnly: true
-          - name: extensions-cache-nginx
+          - name: extensions-cache-config
             mountPath: /etc/nginx/conf.d/stackgres-operator-extensions-cache.conf
             subPath: stackgres-operator-extensions-cache.conf
             readOnly: true
@@ -77,37 +76,51 @@ spec:
             readOnly: true
       - name: "controller"
         image: "ongres/kubectl:v1.19.7-build-6.2"
-        imagePullPolicy: "IfNotPresent"
-        securityContext:
-          runAsUser: 1000
-          runAsGroup: 1000
         env:
-        - name: EXTENSIONS_REPOSITORY_URLS
-          value: "{{ range $index, $element := .Values.extensions.repositoryUrls }}{{ if $index }},{{ end }}{{ $element }}{{ end }}"
-        - name: OPERATOR_NAMESPACE
-          valueFrom:
-            fieldRef:
-              apiVersion: v1
-              fieldPath: metadata.namespace
-        - name: ALLOW_PULL_EXTENSIONS_FROM_IMAGE_REPOSITORY
-          value: "{{ if .Values.developer.allowPullExtensionsFromImageRepository }}true{{ else }}false{{ end }}"
+          - name: EXTENSIONS_REPOSITORY_URLS
+            value: "{{ range $index, $element := .Values.extensions.repositoryUrls }}{{ if $index }},{{ end }}{{ $element }}{{ end }}"
+          - name: OPERATOR_NAMESPACE
+            valueFrom:
+              fieldRef:
+                apiVersion: v1
+                fieldPath: metadata.namespace
+          {{- if .Values.developer.logLevel }}
+          - name: EXTENSIONS_CACHE_LOG_LEVEL
+            value: "{{ .Values.developer.logLevel }}"
+          {{- end }}
+          {{- range .Values.developer.extraOpts }}
+            {{- if . | hasPrefix "-Dquarkus.log.category.\"stackgres-extensions-cache\".level=" }}
+          - name: EXTENSIONS_CACHE_LOG_LEVEL
+            value: "{{ . | trimPrefix "-Dquarkus.log.category.\"stackgres-extensions-cache\".level=" }}"
+            {{- end }}
+          {{- end }}
+          {{- if .Values.extensions.cache.preloadedExtensions }}
+          - name: EXTENSIONS_CACHE_PRELOADED_EXTENSIONS
+            value: {{ .Values.extensions.cache.preloadedExtensions | toJson | squote }}
+          {{- end }}
         command:
           - "/bin/bash"
-          - "-exc"
+          - "-ec"
           - |
+            echo "$EXTENSIONS_CACHE_LOG_LEVEL" | grep -v -q '^\(DEBUG\|TRACE\)$' || set -x
             cd /opt/app-root/src
-            cat << 'SCRIPT_EOF' > extensions-cache-conciliator.sh
-{{ .Files.Get "extensions-cache-conciliator.sh" | indent 12 }}
-            SCRIPT_EOF
-            sh -x extensions-cache-conciliator.sh run "$OPERATOR_NAMESPACE" '{{ .Release.Name }}-extensions-cache'
+            sh /usr/local/bin/extensions-cache-conciliator.sh run "$OPERATOR_NAMESPACE" '{{ .Release.Name }}-extensions-cache'
         volumeMounts:
+          - name: extensions-cache-config
+            mountPath: /usr/local/bin/extensions-cache-conciliator.sh
+            subPath: extensions-cache-conciliator.sh
+            readOnly: true
           - name: {{ .Release.Name }}-extensions-cache
             subPath: repository
             mountPath: /opt/app-root/src
             readOnly: false
+          - name: extensions-cache-nginx-var
+            subPath: var/log/nginx
+            mountPath: /var/log/nginx
+            readOnly: true
       restartPolicy: Always
       volumes:
-        - name: extensions-cache-nginx
+        - name: extensions-cache-config
           configMap:
             name: {{ .Release.Name }}-extensions-cache
             optional: false
@@ -116,6 +129,8 @@ spec:
                 path: nginx.conf
               - key: stackgres-operator-extensions-cache.conf
                 path: stackgres-operator-extensions-cache.conf
+              - key: extensions-cache-conciliator.sh
+                path: extensions-cache-conciliator.sh
         - name: extensions-cache-nginx-var
           emptyDir: {}
   volumeClaimTemplates:
@@ -141,3 +156,4 @@ spec:
       resources:
         requests:
           storage: "{{ .Values.extensions.cache.persistentVolume.size }}"
+{{- end }}
