--- a/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-service-account.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-service-account.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.extensions.cache.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -12,5 +13,6 @@ metadata:
 imagePullSecrets:
 {{- range .Values.serviceAccount.repoCredentials }}
 - name: {{ . }}
+{{- end }}
 {{- end }}
 {{- end }}
