--- a/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-service.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.extensions.cache.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -17,3 +18,4 @@ spec:
       protocol: TCP
       port: 80
       targetPort: http
+{{- end }}
