--- a/stackgres-k8s/src/cluster-controller/pom.xml
+++ b/stackgres-k8s/src/cluster-controller/pom.xml
@@ -48,6 +48,10 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-postgresql</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>io.stackgres</groupId>
