fix: wal_keep_size used in Postgres 13 configurations
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values-pg13.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/postgresql-default-values-pg13.properties
@@ -13,7 +13,7 @@ checkpoint_timeout=15min
 min_wal_size=1GB
 max_wal_size=2GB
 max_wal_senders=20
-wal_keep_segments=96
+wal_keep_size=1536MB
 
 archive_mode=on
 archive_command=/bin/true
