feat: extensions cache and http proxy support

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-role.yaml
@@ -18,4 +18,13 @@ rules:
   - get
   - patch
   - update
+  resourceNames:
+  - {{ .Release.Name }}-extensions-cache
+- apiGroups: [""]
+  resources:
+  - pods
+  verbs:
+  - delete
+  resourceNames:
+  - {{ .Release.Name }}-extensions-cache-0
 {{- end }}
