--- a/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-statefulset.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/extensions-cache-statefulset.yaml
@@ -46,7 +46,7 @@ spec:
         - containerPort: 8080
           name: "http"
           protocol: "TCP"
-        livenessProbe:
+        readinessProbe:
           tcpSocket:
             port: 8080
         volumeMounts:
@@ -98,6 +98,14 @@ spec:
           - name: EXTENSIONS_CACHE_PRELOADED_EXTENSIONS
             value: {{ .Values.extensions.cache.preloadedExtensions | toJson | squote }}
           {{- end }}
+          {{- if .Values.connectivity.httpProxy }}
+          - name: http_proxy
+            value: {{ .Values.connectivity.httpProxy | squote }}
+          {{- end }}
+          {{- if .Values.connectivity.httpsProxy }}
+          - name: HTTPS_PROXY
+            value: {{ .Values.connectivity.httpsProxy | squote }}
+          {{- end }}
         command:
           - "/bin/bash"
           - "-ec"
@@ -105,6 +113,12 @@ spec:
             echo "$EXTENSIONS_CACHE_LOG_LEVEL" | grep -v -q '^\(DEBUG\|TRACE\)$' || set -x
             cd /opt/app-root/src
             sh /usr/local/bin/extensions-cache-conciliator.sh run "$OPERATOR_NAMESPACE" '{{ .Release.Name }}-extensions-cache'
+        readinessProbe:
+          exec:
+            command:
+            - test
+            - -f
+            - /tmp/extensions-cache-ready
         volumeMounts:
           - name: extensions-cache-config
             mountPath: /usr/local/bin/extensions-cache-conciliator.sh
