--- a/stackgres-k8s/install/helm/stackgres-operator/templates/operator-nginx-configmap.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/operator-nginx-configmap.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.deploy.operator .Values.developer.externalOperatorIp .Values.developer.externalOperatorPort }}
+{{ if and .Values.developer.externalOperatorIp .Values.developer.externalOperatorPort }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
