--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -134,3 +134,6 @@ extensions:
       ##   GKE, AWS & OpenStack)
       # storageClass: "-"
 
+connectivity: {}
+  # httpProxy: http://[<user>:<password>@]<host>:<port>
+  # httpsProxy: http://[<user>:<password>@]<host>:<port>
